# SSFormWork

./: .gitignore  LICENSE  README.md
code/Object-C/: NSDataUtil.h  NSDataUtil.m  NSMessageHead.h  NSSocketManager.h  NSSocketManager.m
code/Object-C/SSNSDK/SSNSDK/: NSDataUtil.h  NSDataUtil.m  NSMessageHead.m  SSNSDK.h
code/Object-C/SSNSDK/SSNSDK.xcodeproj/: project.pbxproj
code/Object-C/SSNSDK/SSNSDK.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
code/Object-C/SSNSDK/SSNSDK.xcodeproj/project.xcworkspace/xcuserdata/ajie.xcuserdatad/: UserInterfaceState.xcuserstate
code/Object-C/SSNSDK/SSNSDKTests/: SSNSDKTests.m
code/Swift/SSNSDK/SSNSDK/: NSDataUtil.swift  NSMessageHead.swift  NSSocketManager.swift  SSNSDK.h
code/Swift/SSNSDK/SSNSDK.xcodeproj/: project.pbxproj
code/cpp/: CMakeLists.txt
code/cpp/code/: CMakeLists.txt
code/cpp/code/include/: ssnet.h
code/cpp/code/script/: c_flag_overrides.cmake  common.cmake  msbuild.cmake
code/cpp/code/src/SSNetwork/: SSNetService.cpp  SSNetService.h  SSNetwork.vcxproj  SSNetwork.vcxproj.filters  dllmain.cpp
code/cpp/code/src/SSNetwork/x64/Debug/: ssnetservice.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc141.idb
code/cpp/code/src/SSNetwork/x64/Debug/SSNetwork.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SSNetwork.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/cpp/third/include/: readme.txt
code/java/src/com/starshore/cx/: ISSNetClient.java  Protocol.java  ProtocolHelper.java  SSNetClient.java  User.java
doc/: SSN.docx  ~$SSN.docx
(+2 files in other folders)
